--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
-  color: #525252;
-  background: #6AA6D6 url(../img/devoops_pattern_b10.png) 0 0 repeat;
+  color: #ffffff;
+  background: #700000 url(../img/devoops_pattern_b10.png) 0 0 repeat;
 }
 .body-expanded, .modal-open {
   overflow-y:hidden;
