--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ a.show-sidebar:hover {
   margin-top: 8px;
   padding: 5px;
   font-size: 20px;
-  color: #7BC5D3;
+  color: #707070;
   line-height: 1em;
   vertical-align: top;
   -webkit-border-radius: 4px;
