--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,6 +1,6 @@
 body {
     color: #ffffff;
-    background: #700000 url(../img/devoops_pattern_b10.png) 0 0 repeat;
+    background: #700000; // url(../img/devoops_pattern_b10.png) 0 0 repeat;
 }
 .body-expanded, .modal-open {
     overflow-y:hidden;
@@ -16,6 +16,12 @@ body {
 h1, .h1, h2, .h2, h3, .h3 {
     margin:0;
 }
+
+h1{
+    color: #000000;
+    font-family: FontAwesome ;
+}
+
 #logo {
     position:relative;
     background: #707070; // url(../img/devoops_pattern_b10.png) 0 0 repeat;
@@ -985,7 +991,7 @@ td.beauty-hover {
     padding: 0;
     line-height: 20px;
     font-size: 12px;
-    text-shadow: 1px 1px 1px #FFFFFF;
+    text-shadow: 1px 1px 1px #ffffff;
     color:#929292;
     background-color: #F5F5F5;
     -moz-box-sizing: border-box;
