--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,5 +1,5 @@
 body {
-    color: #ffffff;
+    color: #000000;
     background: #700000; // url(../img/devoops_pattern_b10.png) 0 0 repeat;
 }
 .body-expanded, .modal-open {
@@ -18,7 +18,7 @@ h1, .h1, h2, .h2, h3, .h3 {
 }
 
 h1{
-    color: #000000;
+    color: #FDE910;
     font-family: FontAwesome ;
 }
 
@@ -27,7 +27,7 @@ h1{
     background: #700000; // url(../img/devoops_pattern_b10.png) 0 0 repeat;
 }
 #logo a {
-    color: #fff;
+    color: #700000;
     font-family: 'Righteous', cursive;
     display: block;
     font-size: 20px;
@@ -173,7 +173,7 @@ h1{
 .user-mini > span {
     display: block;
     font-size: 12px;
-    color:#363636;
+    color:#FDE910;
     margin-bottom: -4px;
 }
 .user-mini > span.welcome {
@@ -400,7 +400,7 @@ table.no-border-bottom tr:last-child td {
 }
 .table-datatable img {
     margin-right: 10px;
-    border: 1px solid #F8F8F8;
+    border: 1px solid #000000;
     width: 40px;
 }
 .table-datatable .sorting {
@@ -564,10 +564,10 @@ ul.DTTT_dropdown.dropdown-menu > li:hover > a {
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th,
 td.beauty-hover {
-    background-color: rgba(219, 219, 219, 0.3) !important;
+    background-color: rgb(0, 0, 0) !important;
 }
 .table-hover > tbody > tr:hover > td.beauty-hover:hover {
-    background-color: rgba(219, 219, 219, 0.9) !important;
+    background-color: rgb(0, 0, 0) !important;
 }
 .DTTT.btn-group {
     position: absolute;
@@ -636,7 +636,7 @@ td.beauty-hover {
     border-style: solid;
     border-width: 1px;
     text-decoration: none;
-    border-color: rgba(0, 0, 0, 0.3);
+    border-color: rgb(0, 0, 0);
     cursor: pointer;
     outline: none;
     font-family: "Lucida Grande","Lucida Sans","Lucida Sans Unicode","Segoe UI",Verdana,sans-serif;
@@ -646,7 +646,7 @@ td.beauty-hover {
     font-size: 12px;
     font-weight: bold;
     text-align: center;
-    background-color: #a2a2a2;
+    background-color: #000000;
     background: #a2a2a2 -moz-linear-gradient(top, rgba(255,255,255,0.6), rgba(255,255,255,0));
     background: #a2a2a2 -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(255,255,255,0.6)), to(rgba(255,255,255,0)));
     line-height: 24px;
@@ -714,74 +714,74 @@ td.beauty-hover {
     box-shadow: none;
 }
 .btn-default, .btn-default.disabled, .btn-default[disabled], fieldset[disabled] .btn-default, .btn-default.disabled:hover, .btn-default[disabled]:hover, fieldset[disabled] .btn-default:hover, .btn-default.disabled:focus, .btn-default[disabled]:focus, fieldset[disabled] .btn-default:focus, .btn-default.disabled:active, .btn-default[disabled]:active, fieldset[disabled] .btn-default:active, .btn-default.disabled.active, .btn-default[disabled].active, fieldset[disabled] .btn-default.active, .progress-bar {
-    background-color: #D8D8D8;
-    border-color: rgba(0, 0, 0, 0.3);
+    background-color: #700000;
+    border-color: rgb(0, 0, 0);
     color: #929292;
 }
 .btn-primary, .btn-primary.disabled, .btn-primary[disabled], fieldset[disabled] .btn-primary, .btn-primary.disabled:hover, .btn-primary[disabled]:hover, fieldset[disabled] .btn-primary:hover, .btn-primary.disabled:focus, .btn-primary[disabled]:focus, fieldset[disabled] .btn-primary:focus, .btn-primary.disabled:active, .btn-primary[disabled]:active, fieldset[disabled] .btn-primary:active, .btn-primary.disabled.active, .btn-primary[disabled].active, fieldset[disabled] .btn-primary.active,
 .table > thead > tr > td.primary, .table > tbody > tr > td.primary, .table > tfoot > tr > td.primary, .table > thead > tr > th.primary, .table > tbody > tr > th.primary, .table > tfoot > tr > th.primary, .table > thead > tr.primary > td, .table > tbody > tr.primary > td, .table > tfoot > tr.primary > td, .table > thead > tr.primary > th, .table > tbody > tr.primary > th, .table > tfoot > tr.primary > th {
-    background-color: #000000;
-    border-color: rgba(0, 0, 0, 0.3);
-    color: #f8f8f8;
+    background-color: #700000;
+    border-color: rgb(0, 0, 0);
+    color: #700000;
 }
 .btn-success, .btn-success.disabled, .btn-success[disabled], fieldset[disabled] .btn-success, .btn-success.disabled:hover, .btn-success[disabled]:hover, fieldset[disabled] .btn-success:hover, .btn-success.disabled:focus, .btn-success[disabled]:focus, fieldset[disabled] .btn-success:focus, .btn-success.disabled:active, .btn-success[disabled]:active, fieldset[disabled] .btn-success:active, .btn-success.disabled.active, .btn-success[disabled].active, fieldset[disabled] .btn-success.active, .progress-bar-success,
 .table > thead > tr > td.success, .table > tbody > tr > td.success, .table > tfoot > tr > td.success, .table > thead > tr > th.success, .table > tbody > tr > th.success, .table > tfoot > tr > th.success, .table > thead > tr.success > td, .table > tbody > tr.success > td, .table > tfoot > tr.success > td, .table > thead > tr.success > th, .table > tbody > tr.success > th, .table > tfoot > tr.success > th {
-    background-color: #63CC9E;
-    border-color: rgba(0, 0, 0, 0.3);
-    color: #f8f8f8;
+    background-color: #700000;
+    border-color: rgb(0, 0, 0);
+    color: #700000;
 }
 .btn-info, .btn-info.disabled, .btn-info[disabled], fieldset[disabled] .btn-info, .btn-info.disabled:hover, .btn-info[disabled]:hover, fieldset[disabled] .btn-info:hover, .btn-info.disabled:focus, .btn-info[disabled]:focus, fieldset[disabled] .btn-info:focus, .btn-info.disabled:active, .btn-info[disabled]:active, fieldset[disabled] .btn-info:active, .btn-info.disabled.active, .btn-info[disabled].active, fieldset[disabled] .btn-info.active, .progress-bar-info,
 .table > thead > tr > td.info, .table > tbody > tr > td.info, .table > tfoot > tr > td.info, .table > thead > tr > th.info, .table > tbody > tr > th.info, .table > tfoot > tr > th.info, .table > thead > tr.info > td, .table > tbody > tr.info > td, .table > tfoot > tr.info > td, .table > thead > tr.info > th, .table > tbody > tr.info > th, .table > tfoot > tr.info > th {
-    background-color: #000000;
-    border-color: rgba(0, 0, 0, 0.3);
-    color: #f8f8f8;
+    background-color: #700000;
+    border-color: rgb(0, 0, 0);
+    color: #700000;
 }
 .btn-warning, .btn-warning.disabled, .btn-warning[disabled], fieldset[disabled] .btn-warning, .btn-warning.disabled:hover, .btn-warning[disabled]:hover, fieldset[disabled] .btn-warning:hover, .btn-warning.disabled:focus, .btn-warning[disabled]:focus, fieldset[disabled] .btn-warning:focus, .btn-warning.disabled:active, .btn-warning[disabled]:active, fieldset[disabled] .btn-warning:active, .btn-warning.disabled.active, .btn-warning[disabled].active, fieldset[disabled] .btn-warning.active, .progress-bar-warning,
 .table > thead > tr > td.warning, .table > tbody > tr > td.warning, .table > tfoot > tr > td.warning, .table > thead > tr > th.warning, .table > tbody > tr > th.warning, .table > tfoot > tr > th.warning, .table > thead > tr.warning > td, .table > tbody > tr.warning > td, .table > tfoot > tr.warning > td, .table > thead > tr.warning > th, .table > tbody > tr.warning > th, .table > tfoot > tr.warning > th {
-    background-color: #DFD271;
-    border-color: rgba(0, 0, 0, 0.3);
-    color: #f8f8f8;
+    background-color: #700000;
+    border-color: rgb(0, 0, 0);
+    color: #700000;
 }
 .btn-danger, .btn-danger.disabled, .btn-danger[disabled], fieldset[disabled] .btn-danger, .btn-danger.disabled:hover, .btn-danger[disabled]:hover, fieldset[disabled] .btn-danger:hover, .btn-danger.disabled:focus, .btn-danger[disabled]:focus, fieldset[disabled] .btn-danger:focus, .btn-danger.disabled:active, .btn-danger[disabled]:active, fieldset[disabled] .btn-danger:active, .btn-danger.disabled.active, .btn-danger[disabled].active, fieldset[disabled] .btn-danger.active, .progress-bar-danger,
 .table > thead > tr > td.danger, .table > tbody > tr > td.danger, .table > tfoot > tr > td.danger, .table > thead > tr > th.danger, .table > tbody > tr > th.danger, .table > tfoot > tr > th.danger, .table > thead > tr.danger > td, .table > tbody > tr.danger > td, .table > tfoot > tr.danger > td, .table > thead > tr.danger > th, .table > tbody > tr.danger > th, .table > tfoot > tr.danger > th {
-    background-color: #D15E5E;
-    border-color: rgba(0, 0, 0, 0.3);
-    color: #f8f8f8;
+    background-color: #700000;
+    border-color: rgb(0, 0, 0);
+    color: #700000;
 }
 .btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open .dropdown-toggle.btn-default {
-    color: #525252;
-    background-color: #b8b8b8;
-    border-color: rgba(0, 0, 0, 0.3);
+    color: #700000;
+    background-color: #700000;
+    border-color: rgb(0, 0, 0);
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open .dropdown-toggle.btn-primary,
 .table-hover > tbody > tr > td.primary:hover, .table-hover > tbody > tr > th.primary:hover, .table-hover > tbody > tr.primary:hover > td, .table-hover > tbody > tr.primary:hover > th {
-    color: #fff;
-    background-color: #5a8db6;
-    border-color: rgba(0, 0, 0, 0.3);
+    color: #700000;
+    background-color: #700000;
+    border-color: rgb(0, 0, 0);
 }
 .btn-success:hover, .btn-success:focus, .btn-success:active, .btn-success.active, .open .dropdown-toggle.btn-success,
 .table-hover > tbody > tr > td.success:hover, .table-hover > tbody > tr > th.success:hover, .table-hover > tbody > tr.success:hover > td, .table-hover > tbody > tr.success:hover > th {
-    color: #fff;
-    background-color: #54ae86;
-    border-color: rgba(0, 0, 0, 0.3);
+    color: #700000;
+    background-color: #700000;
+    border-color: rgb(0, 0, 0);
 }
 .btn-info:hover, .btn-info:focus, .btn-info:active, .btn-info.active, .open .dropdown-toggle.btn-info,
 .table-hover > tbody > tr > td.info:hover, .table-hover > tbody > tr > th.info:hover, .table-hover > tbody > tr.info:hover > td, .table-hover > tbody > tr.info:hover > th {
-    color: #fff;
-    background-color: #000000;
-    border-color: rgba(0, 0, 0, 0.3);
+    color: #700000;
+    background-color: #700000;
+    border-color: rgb(0, 0, 0);
 }
 .btn-warning:hover, .btn-warning:focus, .btn-warning:active, .btn-warning.active, .open .dropdown-toggle.btn-warning,
 .table-hover > tbody > tr > td.warning:hover, .table-hover > tbody > tr > th.warning:hover, .table-hover > tbody > tr.warning:hover > td, .table-hover > tbody > tr.warning:hover > th {
-    color: #fff;
-    background-color: #beb360;
-    border-color: rgba(0, 0, 0, 0.3);
+    color: #700000;
+    background-color: #700000;
+    border-color: rgb(0, 0, 0);
 }
 .btn-danger:hover, .btn-danger:focus, .btn-danger:active, .btn-danger.active, .open .dropdown-toggle.btn-danger,
 .table-hover > tbody > tr > td.danger:hover, .table-hover > tbody > tr > th.danger:hover, .table-hover > tbody > tr.danger:hover > td, .table-hover > tbody > tr.danger:hover > th {
-    color: #fff;
-    background-color: #b25050;
-    border-color: rgba(0, 0, 0, 0.3);
+    color: #700000;
+    background-color: #700000;
+    border-color: rgb(0, 0, 0);
 }
 .progress {
     overflow: visible;
@@ -900,8 +900,8 @@ td.beauty-hover {
     border-radius: 4px;
 }
 .beauty-table input:focus {
-    border:1px solid #dfdfdf;
-    background: #fefefe;
+    border:1px solid #000000;
+    background: #000000;
     font-size: 16px;
     text-align: center;
     padding: 2px 15px !important;
@@ -909,7 +909,7 @@ td.beauty-hover {
     outline:none;
 }
 .c {
-    color: #999;
+    color: #000000;
     display: block;
 }
 .nt {
