--- a/css/index_style.css
+++ b/css/index_style.css
@@ -24,7 +24,7 @@ h1{
 
 #logo {
     position:relative;
-    background: #700000; // url(../img/devoops_pattern_b10.png) 0 0 repeat;
+    background: #700000;
 }
 #logo a {
     color: #700000;
