--- a/css/index_style.css
+++ b/css/index_style.css
@@ -2106,3 +2106,23 @@ td.beauty-hover {
     background-color: #700000 ;
     padding-left: 180px; /* Equal to width of new image */
 }
+
+/*
+http://rachelmccollin.co.uk/blog/responsive-iframes/
+http://www.smashingmagazine.com/2014/02/27/making-embedded-content-work-in-responsive-design/
+*/
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
