--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -5810,3 +5810,10 @@ button.close {
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
+
+@media screen and (max-width: 368px) {
+  img.smallResolution{
+    min-height: 150px;
+  }
+
+}
