--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -5811,7 +5811,7 @@ button.close {
 }
 /*# sourceMappingURL=bootstrap.css.map */
 
-@media screen and (max-width: 368px) {
+@media (max-width: 368px) {
   img.smallResolution{
     min-height: 15px;
   }
