--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -5817,7 +5817,7 @@ button.close {
     max-width: 100%;
     width: 100%;
     height: auto;
-    min-height: 15px;
+    /*min-height: 15px;*/
   }
 
 }
