--- a/css/index_style.css
+++ b/css/index_style.css
@@ -9,6 +9,7 @@ body {
 .modal-open #content {z-index: inherit;}
 .body-expanded .expanded-panel, .fancybox-margin .expanded-panel, .modal-open .expanded-panel {
     margin-right: 15px;
+    min-height: 50px;
 }
 .body-screensaver {
     overflow: hidden;
