--- a/css/index_style.css
+++ b/css/index_style.css
@@ -56,6 +56,7 @@ h1{
     box-shadow: 0 1px 2px #272727;
     background: #700000;
     z-index: 2000;
+    min-height: 50px;
 }
 .body-expanded .navbar {
     z-index: 9;
