--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -469,6 +469,10 @@ h6,
 p {
   margin: 0 0 10px;
 }
+p1 {
+  margin: 0 0 10px;
+  font-size: x-small;
+}
 .lead {
   margin-bottom: 20px;
   font-size: 16px;
