--- a/css/index_style.css
+++ b/css/index_style.css
@@ -2142,7 +2142,7 @@ http://www.smashingmagazine.com/2014/02/27/making-embedded-content-work-in-respo
 
 .form-control-1 {
     display: block;
-    width: 200px;
+    width: inherit;
     height: 34px;
     padding: 6px 12px;
     font-size: 14px;
