--- a/css/index_style.css
+++ b/css/index_style.css
@@ -2129,6 +2129,13 @@ http://www.smashingmagazine.com/2014/02/27/making-embedded-content-work-in-respo
     height: 100%;
 }
 
+.captcha-container{
+    position: relative;
+    padding-bottom: 50%;
+    padding-top: 25%;
+    overflow: auto;
+}
+
 /*http://speckyboy.com/2012/03/05/the-challenge-of-responsive-images/*/
 
 .banner-item {
