--- a/css/index_style.css
+++ b/css/index_style.css
@@ -2133,7 +2133,7 @@ http://www.smashingmagazine.com/2014/02/27/making-embedded-content-work-in-respo
     position: relative;
     padding-bottom: 50%;
     padding-top: 25%;
-    overflow: auto;
+    overflow: visible;
 }
 
 /*http://speckyboy.com/2012/03/05/the-challenge-of-responsive-images/*/
