--- a/css/index_style.css
+++ b/css/index_style.css
@@ -2130,10 +2130,11 @@ http://www.smashingmagazine.com/2014/02/27/making-embedded-content-work-in-respo
 }
 
 .captcha-container{
-    position: relative;
+    position: absolute;
     padding-bottom: 50%;
     padding-top: 25%;
     overflow: visible;
+    align-self: center;
 }
 
 /*http://speckyboy.com/2012/03/05/the-challenge-of-responsive-images/*/
