--- a/css/index_style.css
+++ b/css/index_style.css
@@ -2131,9 +2131,10 @@ http://www.smashingmagazine.com/2014/02/27/making-embedded-content-work-in-respo
 
 .captcha-container{
     position: inherit;
-    padding-bottom: 50%;
+    padding-bottom: 10%;
     padding-top: 10%;
     overflow: visible;
+    width: auto;
 }
 
 /*http://speckyboy.com/2012/03/05/the-challenge-of-responsive-images/*/
