--- a/css/index_style.css
+++ b/css/index_style.css
@@ -2511,9 +2511,9 @@ http://www.smashingmagazine.com/2014/02/27/making-embedded-content-work-in-respo
 
 .captcha-container {
     position: inherit;
-    padding-bottom: 10%;
-    padding-top: 10%;
-    overflow: visible;
+    padding-bottom: 5%;
+    padding-top: 5%;
+    overflow: auto;
     width: auto;
 }
 
