--- a/css/index_style.css
+++ b/css/index_style.css
@@ -2517,6 +2517,15 @@ http://www.smashingmagazine.com/2014/02/27/making-embedded-content-work-in-respo
     width: auto;
 }
 
+.captcha-container frame{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
 /*http://speckyboy.com/2012/03/05/the-challenge-of-responsive-images/*/
 
 .banner-item {
