--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -5116,6 +5116,30 @@ a.list-group-item-danger.active:focus {
   border-radius: 3px;
 }
 
+.well-2 {
+  min-height: 5px;
+  padding: 5px;
+  margin-bottom: 5px;
+  /*background-color: #B79a58;*/
+  background-color: #CFB06F;
+  border: 1px solid #000000;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+}
+.well-2 blockquote {
+  border-color: #ddd;
+  border-color: rgba(0, 0, 0, .15);
+}
+.well-2-lg {
+  padding: 24px;
+  border-radius: 6px;
+}
+.well-2-sm {
+  padding: 9px;
+  border-radius: 3px;
+}
+
 .close {
   float: right;
   font-size: 21px;
