--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -1662,6 +1662,13 @@ table th[class*="col-"] {
     border-bottom: 0;
   }
 }
+
+tbody {
+  height: 100px !important;
+  overflow: scroll;
+  display:block;
+}
+
 fieldset {
   min-width: 0;
   padding: 0;
