--- a/css/index_style.css
+++ b/css/index_style.css
@@ -2519,6 +2519,8 @@ http://www.smashingmagazine.com/2014/02/27/making-embedded-content-work-in-respo
     padding-top: 5%;
     overflow: auto;
     width: auto;
+    height: 70%;
+    overflow: scroll;
 }
 
 .captcha-container frame{
