--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -5171,7 +5171,7 @@ a.list-group-item-danger.active:focus {
   padding: 5px;
   margin-bottom: 5px;
   /*background-color: #B79a58;*/
-  background-color: #fee610;
+  background-color: rgba(58, 112, 41, 0.65);
   border: 1px solid #000000;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
