removed media for small device try

--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -5353,15 +5353,15 @@ button.close {
   }
 }
 /*//small screen sizes*/
-@media (max-width: 991px) {
-  .mobile-only {
-    display:block !important;
-  }
+/*@media (max-width: 991px) {*/
+  /*.mobile-only {*/
+    /*display:block !important;*/
+  /*}*/
 
-  .desktop-only {
-    display:none !important;
-  }
-}
+  /*.desktop-only {*/
+    /*display:none !important;*/
+  /*}*/
+/*}*/
 .tooltip {
   position: absolute;
   z-index: 1030;
